examples/valid/09_explicit_contextual_argument.lane
fn weird_add(a : Int, b : Int) -> Int {
  a
}

fn use_weird_add(a : Int, b : Int) -> Int {
  let weird_add_ops : Add[Int] = Add::{ add: weird_add }
  op_add(a, b, op=weird_add_ops)
}
