examples/invalid/13_function_literal_missing_parameter_type.lane
// invalid: a function literal without expected type must provide parameter types
fn bad() -> (Int) -> Int {
  let id = fn(value) {
    value
  }
  id
}

